# PEA_1

./: CMakeLists.txt  README.md
Header/: BruteForce.h  DynamicProgramming.h  LoadFromFile.h
Header/B&B/: BranchAndBound.h  BranchAndBoundThreads.h  Node.h  ThreadPool.h
Header/BF/: BruteForce.h
Header/DP/: DynamicProgramming.h  NodeDP.h
Header/RepresentationOfGraph/: CombinedList.h  GraphRepresentation.h  Matrix.h
Source/: BruteForce.cpp  DynamicProgramming.cpp  LoadFromFile.cpp  main.cpp
Source/B&B/: BranchAndBound.cpp  BranchAndBoundThreads.cpp  Node.cpp  ThreadPool.cpp
Source/BF/: BruteForce.cpp
Source/DP/: DynamicProgramming.cpp
Source/RepresentationOfGraph/: CombinedList.cpp  GraphRepresentation.cpp  LoadFromFile.cpp  Matrix.cpp
